restyle entire website (make more attractive)

--- a/index.html
+++ b/index.html
@@ -1,54 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HoundSite</title>
+    <title>Document</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
+            background-color: rgb(40, 40, 40);
             color: white;
-            padding: 10px;
+            text-shadow: 1px 0 10px rgb(51, 51, 51);
+        }
+
+        @keyframes superman-fly-right {
+            from {
+                transform: translateY(-0.5vw);
+                opacity: 50%;
+            }
+
+            to {
+                transform: translateY(0);
+                opacity: 100%;
+            }
+        }
+
+        .about-us {
+            padding: 3em;
+            box-shadow: 0.5px 0.5px 50px rgba(54, 54, 54, 0.5);
+            border-radius: 5px;
+            margin: auto;
+            margin-top: 100px;
+            width: 500px;
+            justify-content: space-around;
+            animation: superman-fly-right ease-out 1s none;
+            background-color: rgb(52, 52, 52);
+        }
+
+        /* .bottom-bar {
+            background-color: rgb(2, 0, 22);
+            color: rgb(255, 255, 255);
+            padding: 1em;
             text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #333;
-            color: white;
-        }
+            font-weight: 200px;
+            position: absolute;
+            bottom: 0;
+            margin-left: -10px;
+            ;
+            width: 100%;
+        } */
     </style>
 </head>
+
 <body>
-    <header>
-        <h1>Welcome to Hound.com!</h1>
-    </header>
-    <div class="container">
+    <div class="about-us">
         <h2>About The Hounds</h2>
-        <p>This is the website to get to the discord!
-            
-            discord is https://discord.gg/sPQgTXCZ8J anyways welcome to the hound website and i know you came here from the youtube channel and 
-            we welcome you and you can join the channel at any time
-            we provide high quality leaks and a cookie logger for roblox and the website is getting worked on so yeah
-            and if you need any more help go to the discord and make a ticket and our support team will help you look below to see a
-            nice picture of nature.</p>
+        <p>Welcome to the hound website!
+            <br><br>
+            You probably came here from the youtube channel, but don't worry,
+            we welcome you with open arms!
+        </p>
+        <h3>We Provide:</h3>
+        <ul>
+            <li>high quality leaks</li>
+            <li>a cookie logger for Roblox</li>
+        </ul>
+        <p>This website is actively being worked on and if you need any more help go to the discord and make a ticket
+            and our support team will help you to fix any issues you might be having.
+        </p>
     </div>
-    <footer>
-        <p>&copy; 2023 Hound.com</p>
-    </footer>
+    <br>
 </body>
+
 </html>
-<img src="https://th.bing.com/th/id/R.56dde41aee17e96425987f751a9269ce?rik=PimP3aKlBih1aA&riu=http%3a%2f%2fwww.hdwallpaper.nu%2fwp-content%2fuploads%2f2015%2f09%2ftropical_beach_blue_summer_sea_emerald_sand_hd-wallpaper-1701606.jpg&ehk=OVN5KYNNiPQtsbvJxJZF3%2fZMhpDEpVc4ebUXS5y20%2f4%3d&risl=&pid=ImgRaw&r=0" alt="Description of the image" width="1800" height="580">
